# i18n-code-gen

./: Cargo.toml  README.md
src/: code_gen.rs  lokalise_client.rs  main.rs  scala_ast.rs
