[package]
name = "i18n-code-gen"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.4"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
anyhow = "1.0.28"
regex = "1.3.7"
itertools = "0.9.0"
crossterm = "0.17.4"
ctrlc = "3.1.4"
heck = "0.3.1"
lazy_static = "1.4.0"
